; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cmp_asn_test.c_execute_cmp_asn1_get_int_test.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cmp_asn_test.c_execute_cmp_asn1_get_int_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @execute_cmp_asn1_get_int_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @execute_cmp_asn1_get_int_test(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i32* (...) @ASN1_INTEGER_new()
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @ASN1_INTEGER_set(i32* %6, i32 77)
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @ossl_cmp_asn1_get_int(i32* %8)
  %10 = call i32 @TEST_int_eq(i32 77, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @ASN1_INTEGER_free(i32* %14)
  store i32 1, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %12
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32* @ASN1_INTEGER_new(...) #1

declare dso_local i32 @ASN1_INTEGER_set(i32*, i32) #1

declare dso_local i32 @TEST_int_eq(i32, i32) #1

declare dso_local i32 @ossl_cmp_asn1_get_int(i32*) #1

declare dso_local i32 @ASN1_INTEGER_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
